2001-02-02  Pavel Roskin  <proski@gnu.org>

	* autoscan.pl (scan_c_file): When in verbose mode, don't print
	out hashes common for the whole package. Do it in scan_files()
	instead.
	(scan_makefile): Likewise.
	(scan_sh_file): Likewise.
	Thanks to Jim Meyering for improved implementation.

2001-02-01  Pavel Roskin  <proski@gnu.org>

	* autoreconf.sh: Fix the case when the verbose output was not
	redirected to stderr as everywhere else.

2001-01-30  Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acgeneral.m4 (_AC_OUTPUT_SUBDIRS): Remove configure.ac 
	from check for ac_sub_configure.

2001-01-30  Akim Demaille  <akim@epita.fr>

	The recent addition of `exit's prototype in confdefs.h causes
	AC_OUTPUT_MAKE_DEFS to include junky -D switches.
	Reported by Wolfgang Mueller.

	* tests/torture.at (#define header templates): Include trash in
	confdefs.h.
	* tests/atgeneral.at (AT_INIT): Don't expect `find' to support
	-maxdepth, hence don't use -follow either.
	Reported by Nicolas Joly.
	* acgeneral.m4 (AC_OUTPUT_MAKE_DEFS) <confdef2opt.sed>: In the
	`quote' section, `p'rint the result.
	If neither `#define' pattern match, just call `d' to start a new
	cycle.
	Invoke this sed program with -n.

2001-01-30  Akim Demaille  <akim@epita.fr>

	* tests/compile.at: New test.
	* tests/atspecific.at (AT_CHECK): When given 77 as expected exit
	status, don't include the `skip' mechanism.

2001-01-30  Akim Demaille  <akim@epita.fr>

	* tests/base.at (AC_CACHE_CHECK): Typo and clean up.
	Check only --quiet.

2001-01-30  Paul Eggert  <eggert@twinsun.com>

	* autoheader.sh: Don't pass a string to 'echo' that might
	possibly contain backslashes.

2001-01-29  Pavel Roskin  <proski@gnu.org>

	Don't use filenames that can be reduced to "conftest" on DOS.

	* acfunctions.m4 (AC_FUNC_MMAP): Use conftest.mmap, not
	conftestmmap.
	(AC_FUNC_UTIME_NULL): Use conftest.data, not conftestdata.
	* acspecific.m4 (AC_PROG_MAKE_SET): Use conftest.make, not
	conftestmake.